# TestTask

./: CMakeLists.txt
App/: CMakeLists.txt
App/src/: AbstractImageViewWidget.cpp  AbstractImageViewWidget.h  MainWindow.cpp  MainWindow.h  ModifiedImageViewWidget.cpp  ModifiedImageViewWidget.h  SourceImageViewWidget.cpp  SourceImageViewWidget.h  archiver.cpp  archiver.h  main.cpp
Dependencies/: CMakeLists.txt
